--- a/app/src/main/res/layout/fragment_professor_single.xml
+++ b/app/src/main/res/layout/fragment_professor_single.xml
@@ -30,29 +30,36 @@
                     android:layout_marginTop="@dimen/_12pxv"
                     android:layout_width="match_parent"
                     android:orientation="horizontal">
-                    <ImageView android:id="@+id/imageArrowleft"
-                        android:layout_height="@dimen/_15pxh"
+
+                    <ImageView
+                        android:id="@+id/imageArrowleft"
                         android:layout_width="@dimen/_15pxh"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:layout_height="@dimen/_15pxh"
                         android:scaleType="fitXY"
                         android:src="@drawable/img_arrowleft_gray_901"
-                        tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft_gray_901"/>
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:ellipsize="end"
-                        android:id="@+id/btn191"
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        app:layout_constraintTop_toTopOf="parent"
+                        android:visibility="invisible"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:ignore="ContentDescription"
+                        tools:src="@drawable/img_arrowleft_gray_901" />
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/btn191"
+                        style="@style/btnSolidRounded_1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
                         android:letterSpacing="0.01"
                         android:lineSpacingExtra="@dimen/_1pxh"
                         android:singleLine="true"
                         android:text="@string/lbl_19_1"
                         android:textAllCaps="true"
-                        style="@style/btnSolidRounded_1" tools:text="@string/lbl_19_1"/>
+                        android:visibility="invisible"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:text="@string/lbl_19_1" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
                 <TextView android:ellipsize="end"
                     android:id="@+id/teacherInfoPageLabelTV"
@@ -64,7 +71,7 @@
                     android:layout_width="wrap_content"
                     android:lineSpacingExtra="@dimen/_1pxh"
                     android:singleLine="true"
-                    android:text="@{teacherinfopageVM.teacherinfopageModel.teacherInfoPageLabel}"
+                    android:text="@string/professorSinglePageHeader"
                     style="@style/txtRobotoromanmedium24" tools:text="@string/lbl11"/>
             </LinearLayout>
             <LinearLayout android:gravity="center_horizontal"
@@ -91,76 +98,103 @@
                     android:lineSpacingExtra="@dimen/_8pxh"
                     android:text="@{teacherinfopageVM.teacherinfopageModel.teacherInfoName}"
                     style="@style/txtRobotoromanbold16" tools:text="@string/msg5"/>
-                <LinearLayout android:gravity="end"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:gravity="end"
                     android:id="@+id/linearRowtwentytwo"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/_10pxh"
                     android:layout_marginStart="@dimen/_10pxh"
                     android:layout_marginTop="@dimen/_13pxv"
                     android:layout_width="match_parent" android:orientation="horizontal">
-                    <LinearLayout android:id="@+id/linearColumnvector"
+
+                    <LinearLayout
+                        android:id="@+id/markView"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/_2pxh"
                         android:layout_marginTop="@dimen/_2pxv"
-                        android:layout_weight="0.57"
-                        android:layout_width="0dp" android:orientation="vertical">
-                        <LinearLayout android:gravity="start"
+                        android:orientation="vertical"
+
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toLeftOf="@id/palochka">
+
+                        <LinearLayout
                             android:id="@+id/linearRowvector"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="@dimen/_10pxh"
-                            android:layout_width="wrap_content" android:orientation="horizontal">
-                            <ImageView android:id="@+id/imageVector"
-                                android:layout_height="@dimen/_18pxh"
+                            android:gravity="start"
+                            android:orientation="horizontal">
+
+                            <ImageView
+                                android:id="@+id/imageVector"
                                 android:layout_width="@dimen/_25pxh"
+                                android:layout_height="@dimen/_18pxh"
                                 android:scaleType="fitXY"
                                 android:src="@drawable/img_vector_black_900"
-                                tools:ignore="ContentDescription" tools:src="@drawable/img_vector_black_900"/>
-                            <TextView android:ellipsize="end"
+                                tools:ignore="ContentDescription"
+                                tools:src="@drawable/img_vector_black_900" />
+
+                            <TextView
                                 android:id="@+id/teacherInfoPageScoreTV"
+                                style="@style/txtRobotoromanbold14"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginBottom="@dimen/_1pxv"
                                 android:layout_marginStart="@dimen/_4pxh"
                                 android:layout_marginTop="@dimen/_3pxv"
-                                android:layout_width="wrap_content"
+                                android:layout_marginBottom="@dimen/_1pxv"
+                                android:ellipsize="end"
                                 android:letterSpacing="0.01"
                                 android:lineSpacingExtra="@dimen/_1pxh"
                                 android:singleLine="true"
                                 android:text="@{teacherinfopageVM.teacherinfopageModel.teacherScore}"
-                                style="@style/txtRobotoromanbold14" tools:text="@string/lbl_4_67"/>
+                                tools:text="@string/lbl_4_67" />
                         </LinearLayout>
-                        <TextView android:ellipsize="end"
+
+                        <TextView
                             android:id="@+id/teacherInfoPageScoreCountTV"
-                            android:layout_gravity="start"
+                            style="@style/txtRobotoromanlight10"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginEnd="@dimen/_19pxh"
+                            android:layout_gravity="start"
                             android:layout_marginStart="@dimen/_19pxh"
                             android:layout_marginTop="@dimen/_3pxv"
-                            android:layout_width="wrap_content"
+                            android:layout_marginEnd="@dimen/_19pxh"
+                            android:ellipsize="end"
                             android:letterSpacing="0.01"
                             android:lineSpacingExtra="@dimen/_1pxh"
                             android:singleLine="true"
                             android:text="@{teacherinfopageVM.teacherinfopageModel.teacherScoreCount}"
-                            style="@style/txtRobotoromanlight10" tools:text="@string/lbl_22"/>
+                            tools:text="@string/lbl_22" />
                     </LinearLayout>
-                    <View android:background="@color/black_900_33"
-                        android:id="@+id/lineLineOne"
+                    <View
+                        android:background="@color/black_900_33"
+                        android:id="@+id/palochka"
                         android:layout_height="@dimen/_32pxv"
                         android:layout_marginBottom="@dimen/_3pxv"
                         android:layout_marginTop="@dimen/_3pxv"
-                        android:layout_weight="0.005" android:layout_width="0dp"/>
-                    <TextView android:ellipsize="end"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:layout_width="1dp"/>
+                    <TextView
+                        android:ellipsize="end"
                         android:id="@+id/teacherInfoPositionTV"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.43"
                         android:layout_width="wrap_content"
                         android:gravity="center"
                         android:letterSpacing="0.01"
                         android:lineSpacingExtra="@dimen/_1pxh"
-                        android:singleLine="true"
+                        android:paddingVertical="5dp"
+                        android:paddingHorizontal="10dp"
+                        app:layout_constraintLeft_toRightOf="@id/palochka"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         tools:text="@string/lbl7"
                         android:text="@{teacherinfopageVM.teacherinfopageModel.teacherPosition}"
                         style="@style/txtSolidRounded_1" />
-                </LinearLayout>
+                </androidx.constraintlayout.widget.ConstraintLayout>
                 <LinearLayout android:gravity="start"
                     android:id="@+id/linearRowthirtysix"
                     android:layout_height="wrap_content"
@@ -192,101 +226,6 @@
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
-        <FrameLayout android:id="@+id/frameBottombar"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            style="@style/groupStylegray_100">
-            <LinearLayout android:id="@+id/linearRowperson"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="@dimen/_16pxv"
-                android:layout_marginTop="@dimen/_12pxv"
-                android:layout_width="match_parent" android:orientation="horizontal"
-                android:baselineAligned="false">
-                <LinearLayout android:id="@+id/linearItem"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" android:layout_width="0dp" android:orientation="vertical">
-                    <FrameLayout android:id="@+id/frameIcon"
-                        android:layout_height="@dimen/_32pxv"
-                        android:layout_gravity="center"
-                        android:layout_width="@dimen/_64pxh" style="@style/groupStyleblue_2">
-                        <ImageView android:id="@+id/imagePerson"
-                            android:layout_gravity="center"
-                            android:layout_height="@dimen/_16pxh"
-                            android:layout_marginBottom="@dimen/_8pxv"
-                            android:layout_marginTop="@dimen/_8pxv"
-                            android:layout_width="@dimen/_16pxh"
-                            android:scaleType="fitXY"
-                            android:src="@drawable/img_person"
-                            tools:ignore="ContentDescription" tools:src="@drawable/img_person"/>
-                    </FrameLayout>
-                    <TextView android:ellipsize="end"
-                        android:gravity="center_horizontal"
-                        android:id="@+id/teacherInfoButtonLabelTV"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="@dimen/_2pxh"
-                        android:layout_marginStart="@dimen/_2pxh"
-                        android:layout_marginTop="@dimen/_7pxv"
-                        android:layout_width="match_parent"
-                        android:letterSpacing="0.03"
-                        android:lineSpacingExtra="@dimen/_1pxh"
-                        android:singleLine="true"
-                        android:text="@{teacherinfopageVM.teacherinfopageModel.teacherInfoPageLabel}"
-                        style="@style/txtRobotomedium12_1" tools:text="@string/lbl5"/>
-                </LinearLayout>
-                <LinearLayout android:id="@+id/linearItem1"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/_2pxv"
-                    android:layout_marginTop="@dimen/_5pxv"
-                    android:layout_weight="1" android:layout_width="0dp" android:orientation="vertical">
-                    <ImageView android:id="@+id/imageVectorSix"
-                        android:layout_gravity="center"
-                        android:layout_height="@dimen/_20pxh"
-                        android:layout_width="@dimen/_16pxh"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/img_vector"
-                        tools:ignore="ContentDescription" tools:src="@drawable/img_vector"/>
-                    <TextView android:ellipsize="end"
-                        android:gravity="center_horizontal"
-                        android:id="@+id/teacherInfoTimetableButtonLabelTV"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="@dimen/_2pxh"
-                        android:layout_marginStart="@dimen/_2pxh"
-                        android:layout_marginTop="@dimen/_12pxv"
-                        android:layout_width="match_parent"
-                        android:letterSpacing="0.03"
-                        android:lineSpacingExtra="@dimen/_1pxh"
-                        android:singleLine="true"
-                        android:text="@{teacherinfopageVM.teacherinfopageModel.teacherInfoTimetableButtonLabel}"
-                        style="@style/txtRobotomedium12_1" tools:text="@string/lbl"/>
-                </LinearLayout>
-                <LinearLayout android:id="@+id/linearItem2"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/_2pxv"
-                    android:layout_marginTop="@dimen/_9pxv"
-                    android:layout_weight="1" android:layout_width="0dp" android:orientation="vertical">
-                    <ImageView android:id="@+id/imageVectorSeven"
-                        android:layout_gravity="center"
-                        android:layout_height="@dimen/_13pxh"
-                        android:layout_width="@dimen/_18pxh"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/img_vector_gray_911"
-                        tools:ignore="ContentDescription" tools:src="@drawable/img_vector_gray_911"/>
-                    <TextView android:ellipsize="end"
-                        android:gravity="center_horizontal"
-                        android:id="@+id/teacherInfoMenuButtonLabelTV"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="@dimen/_2pxh"
-                        android:layout_marginStart="@dimen/_2pxh"
-                        android:layout_marginTop="@dimen/_15pxv"
-                        android:layout_width="match_parent"
-                        android:letterSpacing="0.03"
-                        android:lineSpacingExtra="@dimen/_1pxh"
-                        android:singleLine="true"
-                        android:text="@{teacherinfopageVM.teacherinfopageModel.teacherInfoMenuButtonLabel}"
-                        style="@style/txtRobotomedium12_1" tools:text="@string/lbl6"/>
-                </LinearLayout>
-            </LinearLayout>
-        </FrameLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
