--- a/app/src/main/res/layout/row_professorpage.xml
+++ b/app/src/main/res/layout/row_professorpage.xml
@@ -13,11 +13,14 @@
         android:orientation="horizontal" style="@style/groupStylewhite_1">
         <ImageView
             android:background="@drawable/rectangle_bg_bluegray_100_radius_20"
+            android:scaleType="centerCrop"
             android:id="@+id/professorImage"
-            android:layout_height="@dimen/_40pxh"
+
+            android:layout_height="@dimen/_65pxh"
             android:layout_marginBottom="@dimen/_19pxv"
             android:layout_marginStart="@dimen/_9pxh"
-            android:layout_marginTop="@dimen/_19pxv" android:layout_width="@dimen/_40pxh"/>
+            android:layout_marginTop="@dimen/_19pxv"
+            android:layout_width="@dimen/_65pxh"/>
 
         <LinearLayout
             android:id="@+id/linearColumnfourteen"
