--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2874,4 +2874,6 @@
     <dimen name="_882sp">882.0sp</dimen>
     <dimen name="_883sp">883.0sp</dimen>
     <dimen name="_884sp">884.0sp</dimen>
+    <dimen name="list_item_spacing">16dp</dimen>
+    <dimen name="list_item_spacing_half">8dp</dimen>
 </resources>
