--- a/app/src/main/res/layout/row_timetablepage.xml
+++ b/app/src/main/res/layout/row_timetablepage.xml
@@ -80,7 +80,8 @@
                 android:layout_marginTop="@dimen/_2pxv"
                 android:layout_width="match_parent"
                 android:orientation="horizontal">
-                <View
+                <ImageView
+                    android:scaleType="centerCrop"
                     android:background="@drawable/rectangle_bg_bluegray_100_radius_12"
                     android:id="@+id/teacherAvatarCircle"
                     android:layout_height="@dimen/_24pxh" android:layout_width="@dimen/_24pxh"/>
