--- a/app/src/main/res/layout/fragment_timetable.xml
+++ b/app/src/main/res/layout/fragment_timetable.xml
@@ -145,26 +145,18 @@
                 tools:itemCount="6"
                 tools:listitem="@layout/row_timetablepage" />
 
-            <LinearLayout
+            <RelativeLayout
                 android:id="@+id/buttons_bar"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:gravity="center"
+                android:layout_marginHorizontal="40dp"
                 android:orientation="horizontal"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+
                 app:layout_constraintStart_toStartOf="parent">
 
-                <LinearLayout
-                    android:id="@+id/linearIconButton"
-                    style="@style/groupStylewhite_A701cornerRadius"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_1pxv"
-                    android:layout_marginBottom="@dimen/_1pxv"
-                    android:gravity="center_horizontal"
-                    android:orientation="vertical">
 
                     <ImageButton
                         android:id="@+id/btnArrowleft"
@@ -175,18 +167,19 @@
                         android:paddingHorizontal="@dimen/_12pxh"
                         android:paddingVertical="@dimen/_12pxv"
                         android:scaleType="fitCenter"
+                        android:layout_alignParentStart="true"
                         android:src="@drawable/img_arrowleft"
                         tools:ignore="ContentDescription" />
-                </LinearLayout>
+
 
                 <LinearLayout
                     android:id="@+id/linearColumnthirteen"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_29pxh"
+
+                    android:layout_centerInParent="true"
                     android:layout_marginTop="@dimen/_3pxv"
                     android:layout_marginBottom="@dimen/_3pxv"
-                    android:gravity="start"
                     android:orientation="vertical">
 
                     <TextView
@@ -194,10 +187,8 @@
                         style="@style/txtRobotoromanbold16"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:ellipsize="end"
-                        android:gravity="center"
+                        android:gravity="center_horizontal"
                         android:letterSpacing="0.01"
-                        android:lineSpacingExtra="@dimen/_1pxh"
                         android:singleLine="true"
                         android:text="@{timetablepageVM.timetablepageModel.todayString}"
                         tools:text="@string/lbl4" />
@@ -207,40 +198,26 @@
                         style="@style/txtRobotomedium14_1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/_3pxh"
-                        android:layout_marginTop="@dimen/_5pxv"
-                        android:layout_marginEnd="@dimen/_3pxh"
-                        android:ellipsize="end"
                         android:gravity="center_horizontal"
                         android:letterSpacing="0.01"
-                        android:lineSpacingExtra="@dimen/_1pxh"
                         android:singleLine="true"
                         android:text="@{timetablepageVM.timetablepageModel.currentDate}"
                         tools:text="@string/lbl_24_12_22" />
                 </LinearLayout>
 
-                <LinearLayout
-                    android:id="@+id/linearIconButton1"
-                    style="@style/groupStylewhite_A701cornerRadius"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_29pxh"
-                    android:gravity="center_horizontal"
-                    android:orientation="vertical">
-
                     <ImageButton
                         android:id="@+id/btnArrowright"
                         android:layout_width="@dimen/_40pxh"
                         android:layout_height="@dimen/_40pxh"
-                        android:layout_gravity="start"
+
+                        android:layout_alignParentEnd="true"
                         android:background="@drawable/rectangle_bg_blue_800_radius_20"
                         android:paddingHorizontal="@dimen/_12pxh"
                         android:paddingVertical="@dimen/_12pxv"
                         android:scaleType="fitCenter"
                         android:src="@drawable/img_arrowright"
                         tools:ignore="ContentDescription" />
-                </LinearLayout>
-            </LinearLayout>
+            </RelativeLayout>
 
 <!--            <FrameLayout-->
 <!--                android:id="@+id/bottomBar"-->
