add group selection

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -179,4 +179,8 @@
     <style name="groupStyleblue_50cornerRadius">
         <item name="android:background">@drawable/rectangle_bg_blue_50_radius_tl_100_bl_100</item>
     </style>
+    <style name="BottomNavigationView">
+        <item name="colorOnSecondaryContainer">@color/white_A700</item>
+        <item name="colorOnSurface">@color/blue_50</item>
+    </style>
 </resources>
