--- a/app/src/main/res/layout/fragment_timetable.xml
+++ b/app/src/main/res/layout/fragment_timetable.xml
@@ -80,7 +80,7 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/groupChooseButton"
+                            android:id="@+id/timetableTypeTV"
                             style="@style/txtRobotomedium12"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
