--- a/app/src/main/res/layout/group_view.xml
+++ b/app/src/main/res/layout/group_view.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    style="@style/txtSolidRounded_1">
     <TextView
         android:id="@+id/groupNameTV"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/groupNameTVPlaceholder"
-        android:layout_marginStart="8dp"
+        android:gravity="center_horizontal"
+        android:autoSizeTextType="none"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:singleLine="true"
+        app:flow_wrapMode="none"
         android:textAppearance="?attr/textAppearanceHeadline4"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
