Обновление оценок и комментариев прпеподов

--- a/app/src/main/res/layout/professor_dialog.xml
+++ b/app/src/main/res/layout/professor_dialog.xml
@@ -18,7 +18,7 @@
         android:id="@+id/markEditText"
         android:hint="Оценка"
 
-        android:inputType="numberDecimal"
+        android:inputType="number"
         android:layout_height="wrap_content">
     </EditText>
 
