--- a/app/src/main/res/layout/row_timetablepage.xml
+++ b/app/src/main/res/layout/row_timetablepage.xml
@@ -6,10 +6,14 @@
     <data>
         <variable name="timetablepageRowModel" type="com.leenz.pnrpu.models.pagesmodels.TimetablepageRowModel"/>
     </data>
-    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/linearTimetableCard"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/linearTimetableCard"
         android:layout_height="wrap_content"
-        android:layout_width="match_parent" android:orientation="horizontal">
+        android:layout_width="match_parent"
+        android:padding="2dp"
+        android:orientation="horizontal">
         <androidx.appcompat.widget.AppCompatButton
+
             android:ellipsize="end" android:gravity="center"
             android:id="@+id/timeButton"
             android:layout_height="@dimen/_33pxv"
@@ -28,11 +32,13 @@
             android:gravity="center"
             android:id="@+id/linearSubjectCard"
             android:layout_height="wrap_content"
+
             app:layout_constraintStart_toEndOf="@id/timeButton"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginStart="@dimen/_6pxh"
+            android:background="@color/white_A700"
             android:layout_weight="0.8" android:layout_width="0dp"
             android:orientation="vertical" style="@style/groupStylewhite_1">
             <LinearLayout android:id="@+id/lessonNameRowLayout"
@@ -41,6 +47,7 @@
                 android:layout_marginStart="@dimen/_7pxh"
                 android:layout_marginTop="@dimen/_5pxv"
                 android:layout_width="match_parent"
+
                 android:orientation="horizontal">
                 <TextView android:id="@+id/lessonNameTV"
                     android:layout_height="wrap_content"
@@ -123,6 +130,13 @@
                     android:text="@{timetablepageRowModel.lessonLocation}"
                     style="@style/txtRobotoromanmedium12" tools:text="@string/lbl_201"/>
             </LinearLayout>
+<!--            <View-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="1dp"-->
+<!--                app:layout_constraintTop_toBottomOf="@id/linearSubjectCard"-->
+<!--                android:background="@color/gray_400" />-->
+
         </LinearLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
