--- a/app/src/main/res/layout/fragment_professor.xml
+++ b/app/src/main/res/layout/fragment_professor.xml
@@ -1,63 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <data>
-        <variable name="teacherpageVM" type="com.leenz.pnrpu.viewmodels.TeacherpageVM"/>
+
+        <variable
+            name="teacherpageVM"
+            type="com.leenz.pnrpu.viewmodels.TeacherpageVM" />
     </data>
-    <androidx.constraintlayout.widget.ConstraintLayout android:gravity="start"
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/linearColumnstatusbar"
-        android:layout_height="match_parent"
+        style="@style/groupStylewhite_A700"
         android:layout_width="match_parent"
-        android:orientation="vertical" style="@style/groupStylewhite_A700">
-        <LinearLayout android:gravity="center_horizontal"
+        android:layout_height="match_parent"
+        android:gravity="start"
+        android:orientation="vertical">
+
+        <LinearLayout
             android:id="@+id/linearTeacherPage"
-            android:layout_height="wrap_content"
+            style="@style/groupStylewhite_A700"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
             android:orientation="vertical"
-            app:layout_constraintTop_toTopOf="parent"
-            style="@style/groupStylewhite_A700">
-            <View android:background="@color/white_A700"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <View
                 android:id="@+id/viewStatusbar"
+                android:layout_width="@dimen/_360pxh"
+                android:layout_height="@dimen/_10pxv"
                 android:layout_gravity="start"
-                android:layout_height="@dimen/_10pxv" android:layout_width="@dimen/_360pxh"/>
-            <LinearLayout android:gravity="center_horizontal"
+                android:background="@color/white_A700" />
+
+            <LinearLayout
                 android:id="@+id/linearTopAppBar"
-                android:layout_height="wrap_content"
+                style="@style/groupStylewhite_A700"
                 android:layout_width="match_parent"
-                android:orientation="vertical" style="@style/groupStylewhite_A700">
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
+
                 <androidx.appcompat.widget.AppCompatButton
-                    android:ellipsize="end" android:gravity="center"
                     android:id="@+id/btn191"
-                    android:layout_gravity="center_horizontal"
+                    style="@style/btnSolidRounded_1"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/_16pxh"
+                    android:layout_gravity="center_horizontal"
                     android:layout_marginStart="@dimen/_16pxh"
                     android:layout_marginTop="@dimen/_12pxv"
-                    android:layout_width="wrap_content"
+                    android:layout_marginEnd="@dimen/_16pxh"
+                    android:ellipsize="end"
+                    android:gravity="center"
                     android:letterSpacing="0.01"
                     android:lineSpacingExtra="@dimen/_1pxh"
-                    android:paddingBottom="@dimen/_13pxv"
-                    android:paddingEnd="@dimen/_24pxh"
                     android:paddingStart="@dimen/_24pxh"
                     android:paddingTop="@dimen/_13pxv"
+                    android:paddingEnd="@dimen/_24pxh"
+                    android:paddingBottom="@dimen/_13pxv"
                     android:singleLine="true"
                     android:text="@string/lbl_19_1"
                     android:textAllCaps="false"
-                    style="@style/btnSolidRounded_1" tools:text="@string/lbl_19_1"/>
-                <TextView android:ellipsize="end"
+                    tools:text="@string/lbl_19_1" />
+
+                <TextView
                     android:id="@+id/professorsLabelTV"
-                    android:layout_gravity="start"
+                    style="@style/txtRobotoromanmedium24"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/_22pxv"
-                    android:layout_marginEnd="@dimen/_16pxh"
+                    android:layout_gravity="start"
                     android:layout_marginStart="@dimen/_16pxh"
                     android:layout_marginTop="@dimen/_13pxv"
-                    android:layout_width="wrap_content"
+                    android:layout_marginEnd="@dimen/_16pxh"
+                    android:layout_marginBottom="@dimen/_22pxv"
+                    android:ellipsize="end"
                     android:lineSpacingExtra="@dimen/_1pxh"
                     android:singleLine="true"
                     android:text="@string/professorPageHeader"
-                    style="@style/txtRobotoromanmedium24" tools:text="@string/lbl5"/>
+                    tools:text="@string/lbl5" />
             </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
