--- a/app/src/main/res/layout/fragment_professor_single.xml
+++ b/app/src/main/res/layout/fragment_professor_single.xml
@@ -1,35 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <data>
-        <variable name="teacherinfopageVM" type="com.leenz.pnrpu.viewmodels.TeacherinfopageVM"/>
+
+        <variable
+            name="teacherinfopageVM"
+            type="com.leenz.pnrpu.viewmodels.TeacherinfopageVM" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:gravity="start"
         android:id="@+id/linearColumn"
-        android:layout_height="match_parent"
+        style="@style/groupStylewhite_A700"
         android:layout_width="match_parent"
-        android:orientation="vertical" style="@style/groupStylewhite_A700">
-        <LinearLayout android:gravity="start"
+        android:layout_height="match_parent"
+        android:gravity="start"
+        android:orientation="vertical">
+
+        <LinearLayout
             android:id="@+id/linearColumnstatusbar"
-            android:layout_height="wrap_content"
+            style="@style/groupStylewhite_A700"
             android:layout_width="match_parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:orientation="vertical" style="@style/groupStylewhite_A700">
-            <LinearLayout android:gravity="start"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:orientation="vertical"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <LinearLayout
                 android:id="@+id/linearColumnarrowleft"
-                android:layout_height="wrap_content"
+                style="@style/groupStylewhite_A700"
                 android:layout_width="match_parent"
-                android:orientation="vertical" style="@style/groupStylewhite_A700">
-                <androidx.constraintlayout.widget.ConstraintLayout android:gravity="start"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:orientation="vertical">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/linearRowarrowleft"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/_20pxh"
                     android:layout_marginStart="@dimen/_20pxh"
                     android:layout_marginTop="@dimen/_12pxv"
-                    android:layout_width="match_parent"
+                    android:layout_marginEnd="@dimen/_20pxh"
+                    android:gravity="start"
                     android:orientation="horizontal">
 
                     <ImageView
@@ -62,56 +75,69 @@
                         app:layout_constraintTop_toTopOf="parent"
                         tools:text="@string/lbl_19_1" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
-                <TextView android:ellipsize="end"
+
+                <TextView
                     android:id="@+id/teacherInfoPageLabelTV"
+                    style="@style/txtRobotoromanmedium24"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/_22pxv"
-                    android:layout_marginEnd="@dimen/_16pxh"
                     android:layout_marginStart="@dimen/_16pxh"
                     android:layout_marginTop="@dimen/_13pxv"
-                    android:layout_width="wrap_content"
+                    android:layout_marginEnd="@dimen/_16pxh"
+                    android:layout_marginBottom="@dimen/_22pxv"
+                    android:ellipsize="end"
                     android:lineSpacingExtra="@dimen/_1pxh"
                     android:singleLine="true"
                     android:text="@string/professorSinglePageHeader"
-                    style="@style/txtRobotoromanmedium24" tools:text="@string/lbl11"/>
+                    tools:text="@string/lbl11" />
             </LinearLayout>
 
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-                <LinearLayout android:gravity="center_horizontal"
+
+                <LinearLayout
                     android:id="@+id/linearColumnellipseone"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/_2pxh"
                     android:layout_marginStart="@dimen/_2pxh"
-                    android:layout_width="match_parent" android:orientation="vertical">
+                    android:layout_marginEnd="@dimen/_2pxh"
+                    android:gravity="center_horizontal"
+                    android:orientation="vertical">
+
                     <ImageView
-                        android:background="@drawable/rectangle_bg_bluegray_100_radius_45"
                         android:id="@+id/professorImageAvatar"
-                        android:layout_gravity="center_horizontal"
-                        android:scaleType="centerCrop"
+                        android:layout_width="@dimen/_90pxh"
                         android:layout_height="@dimen/_90pxh"
-                        android:layout_marginEnd="@dimen/_10pxh"
-                        android:layout_marginStart="@dimen/_10pxh" android:layout_width="@dimen/_90pxh"/>
-                    <TextView android:id="@+id/teacherInfoNameTV"
                         android:layout_gravity="center_horizontal"
-                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_10pxh"
                         android:layout_marginEnd="@dimen/_10pxh"
+                        android:background="@drawable/rectangle_bg_bluegray_100_radius_45"
+                        android:scaleType="centerCrop" />
+
+                    <TextView
+                        android:id="@+id/teacherInfoNameTV"
+                        style="@style/txtRobotoromanbold16"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
                         android:layout_marginStart="@dimen/_10pxh"
                         android:layout_marginTop="@dimen/_15pxv"
-                        android:layout_width="wrap_content"
+                        android:layout_marginEnd="@dimen/_10pxh"
                         android:letterSpacing="0.01"
                         android:lineSpacingExtra="@dimen/_8pxh"
                         android:text="@{teacherinfopageVM.teacherinfopageModel.teacherInfoName}"
-                        style="@style/txtRobotoromanbold16" tools:text="@string/msg5"/>
+                        tools:text="@string/msg5" />
+
                     <androidx.constraintlayout.widget.ConstraintLayout
-                        android:gravity="end"
                         android:id="@+id/linearRowtwentytwo"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="@dimen/_10pxh"
                         android:layout_marginStart="@dimen/_10pxh"
                         android:layout_marginTop="@dimen/_13pxv"
-                        android:layout_width="match_parent" android:orientation="horizontal">
+                        android:layout_marginEnd="@dimen/_10pxh"
+                        android:gravity="end"
+                        android:orientation="horizontal">
 
                         <LinearLayout
                             android:id="@+id/markView"
@@ -171,71 +197,86 @@
                                 android:text="@{teacherinfopageVM.teacherinfopageModel.teacherScoreCount}"
                                 tools:text="@string/lbl_22" />
                         </LinearLayout>
+
                         <View
-                            android:background="@color/black_900_33"
                             android:id="@+id/palochka"
+                            android:layout_width="1dp"
                             android:layout_height="@dimen/_32pxv"
-                            android:layout_marginBottom="@dimen/_3pxv"
                             android:layout_marginTop="@dimen/_3pxv"
+                            android:layout_marginBottom="@dimen/_3pxv"
+                            android:background="@color/black_900_33"
+                            app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintRight_toRightOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            android:layout_width="1dp"/>
+                            app:layout_constraintTop_toTopOf="parent" />
+
                         <TextView
-                            android:ellipsize="end"
                             android:id="@+id/teacherInfoPositionTV"
-                            android:layout_height="wrap_content"
+                            style="@style/txtSolidRounded_1"
                             android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:ellipsize="end"
                             android:gravity="center"
                             android:letterSpacing="0.01"
                             android:lineSpacingExtra="@dimen/_1pxh"
-                            android:paddingVertical="5dp"
                             android:paddingHorizontal="10dp"
+                            android:paddingVertical="5dp"
+                            android:text="@{teacherinfopageVM.teacherinfopageModel.teacherPosition}"
+                            app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintLeft_toRightOf="@id/palochka"
                             app:layout_constraintRight_toRightOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            tools:text="@string/lbl7"
-                            android:text="@{teacherinfopageVM.teacherinfopageModel.teacherPosition}"
-                            style="@style/txtSolidRounded_1" />
+                            tools:text="@string/lbl7" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
-                    <LinearLayout android:gravity="start"
+
+                    <LinearLayout
                         android:id="@+id/linearRowthirtysix"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="@dimen/_10pxh"
                         android:layout_marginStart="@dimen/_10pxh"
                         android:layout_marginTop="@dimen/_21pxv"
-                        android:layout_width="match_parent" android:orientation="horizontal">
-                        <TextView android:ellipsize="end"
+                        android:layout_marginEnd="@dimen/_10pxh"
+                        android:gravity="start"
+                        android:orientation="horizontal">
+
+                        <TextView
                             android:id="@+id/teacherInfoPageDepartmentLabelTV"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="@dimen/_14pxv"
-                            android:layout_marginTop="@dimen/_1pxv"
-                            android:layout_weight="0.22"
+                            style="@style/txtRobotoromanbold14"
                             android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/_1pxv"
+                            android:layout_marginBottom="@dimen/_14pxv"
+                            android:layout_weight="0.22"
+                            android:ellipsize="end"
                             android:letterSpacing="0.01"
                             android:lineSpacingExtra="@dimen/_1pxh"
                             android:singleLine="true"
                             android:text="@string/lbl12"
-                            style="@style/txtRobotoromanbold14" tools:text="@string/lbl12"/>
-                        <TextView android:id="@+id/teacherInfoDepartmentTV"
+                            tools:text="@string/lbl12" />
+
+                        <TextView
+                            android:id="@+id/teacherInfoDepartmentTV"
+                            style="@style/txtRobotoromanregular14"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="@dimen/_42pxh"
                             android:layout_weight="0.78"
-                            android:layout_width="0dp"
                             android:letterSpacing="0.01"
                             android:lineSpacingExtra="@dimen/_1pxh"
                             android:text="@{teacherinfopageVM.teacherinfopageModel.teacherDepartment}"
-                            style="@style/txtRobotoromanregular14" tools:text="@string/msg6"/>
+                            tools:text="@string/msg6" />
                     </LinearLayout>
-                    <LinearLayout android:gravity="start"
+
+                    <LinearLayout
                         android:id="@+id/linearRow"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="@dimen/_10pxh"
                         android:layout_marginStart="@dimen/_10pxh"
                         android:layout_marginTop="@dimen/_21pxv"
-                        android:layout_width="match_parent" android:orientation="vertical">
+                        android:layout_marginEnd="@dimen/_10pxh"
+                        android:gravity="start"
+                        android:orientation="vertical">
+
                         <TextView
                             android:id="@+id/commentTV"
                             style="@style/txtRobotoromanbold14"
@@ -249,11 +290,12 @@
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
                             tools:text="@string/lbl13" />
+
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            app:layout_constraintTop_toBottomOf="@+id/commentTV"
-                            android:descendantFocusability="blocksDescendants">
+                            android:descendantFocusability="blocksDescendants"
+                            app:layout_constraintTop_toBottomOf="@+id/commentTV">
 
                             <androidx.recyclerview.widget.RecyclerView
                                 android:id="@+id/commentsRecycleView"
@@ -271,13 +313,12 @@
             android:id="@+id/openDialogButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
             android:layout_margin="@dimen/_15pxh"
+            android:background="@color/blue_50"
             android:src="@drawable/img_vector_black_900"
             app:backgroundTint="@color/blue_50"
-            android:background="@color/blue_50">
-        </com.google.android.material.floatingactionbutton.FloatingActionButton>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"></com.google.android.material.floatingactionbutton.FloatingActionButton>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
