--- a/app/src/main/res/layout/group_select_menu.xml
+++ b/app/src/main/res/layout/group_select_menu.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/rectangle_bg_blue_50_radius_11_5">
+
     <SearchView
-        app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/groupSelectSearchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/groupSelectSearchView"/>
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/groupSelectRecyclerView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/groupSelectRecyclerView"
-        tools:listitem="@layout/group_view"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintTop_toBottomOf="@id/groupSelectSearchView"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/groupSelectSearchView"
+        tools:listitem="@layout/group_view" />
 </androidx.constraintlayout.widget.ConstraintLayout>
