--- a/app/src/main/res/layout/group_view.xml
+++ b/app/src/main/res/layout/group_view.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    style="@style/txtSolidRounded_1"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    style="@style/txtSolidRounded_1">
+    android:layout_height="wrap_content">
+
     <TextView
         android:id="@+id/groupNameTV"
+        style="@style/txtSolidRounded_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/groupNameTVPlaceholder"
-        android:gravity="center_horizontal"
         android:autoSizeTextType="none"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:singleLine="true"
-        app:flow_wrapMode="none"
+        android:gravity="center_horizontal"
         android:padding="4dp"
-        style="@style/txtSolidRounded_1"
-        />
+        android:singleLine="true"
+        android:text="@string/groupNameTVPlaceholder"
+        app:flow_wrapMode="none"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
