--- a/app/src/main/res/layout/professor_dialog.xml
+++ b/app/src/main/res/layout/professor_dialog.xml
@@ -1,52 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_weight=".70"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/dialog_bg"
-
     android:layout_margin="15dp"
-    android:layout_width="match_parent">
+    android:layout_weight=".70"
+
+    android:background="@drawable/dialog_bg"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
             android:text="Оценка"
-            android:textSize="22sp"
             android:textColor="@color/black"
-            android:layout_marginBottom="16dp"/>
+            android:textSize="22sp" />
 
         <EditText
-            android:layout_width="match_parent"
             android:id="@+id/markEditText"
-            android:hint="Оценка"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
 
-            android:inputType="number"
-            android:layout_height="wrap_content">
-        </EditText>
+            android:hint="Оценка"
+            android:inputType="number"></EditText>
 
         <EditText
+            android:id="@+id/commentEditText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="Комментарий"
             android:gravity="top"
-            android:lines="10"
-            android:inputType="textMultiLine"
+            android:hint="Комментарий"
             android:imeOptions="actionNext"
-            android:id="@+id/commentEditText"/>
+            android:inputType="textMultiLine"
+            android:lines="10" />
+
         <Button
+            android:id="@+id/submit_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:text="Оценить"
-            android:textSize="@dimen/_18pxh"
-            android:textColor="@color/black"
             android:backgroundTint="@color/blue_50"
-            android:id="@+id/submit_button"/>
+            android:text="Оценить"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_18pxh" />
 
 
     </LinearLayout>
