--- a/app/src/main/res/layout/professor_view.xml
+++ b/app/src/main/res/layout/professor_view.xml
@@ -11,28 +11,32 @@
         android:layout_height="90dp"
         android:layout_margin="5dp"
         tools:srcCompat="@tools:sample/avatars" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
         <TextView
+            android:id="@+id/professorName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Name"
-            android:textSize="20sp"
-            android:id="@+id/professorName"/>
+            android:textSize="20sp" />
+
         <TextView
+            android:id="@+id/professorDepartment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Department"
-            android:textSize="18sp"
-            android:id="@+id/professorDepartment"/>
+            android:textSize="18sp" />
+
         <TextView
+            android:id="@+id/professorPosition"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Position"
-            android:textSize="18sp"
-            android:id="@+id/professorPosition"/>
+            android:textSize="18sp" />
 
     </LinearLayout>
 </LinearLayout>
