--- a/app/src/main/res/layout/row_comment.xml
+++ b/app/src/main/res/layout/row_comment.xml
@@ -4,50 +4,63 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout android:id="@+id/linearComment"
-    android:layout_gravity="top|start"
-    android:layout_height="wrap_content"
-    android:layout_width="match_parent"
-    android:orientation="vertical" style="@style/groupStylewhite_1">
-    <LinearLayout android:gravity="start"
-        android:id="@+id/linearRowvectorOne"
+    <LinearLayout
+        android:id="@+id/linearComment"
+        style="@style/groupStylewhite_1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/_10pxh"
-        android:layout_marginStart="@dimen/_10pxh"
-        android:layout_marginTop="@dimen/_10pxv"
-        android:layout_width="wrap_content" android:orientation="horizontal">
-        <ImageView android:id="@+id/imageVectorOne"
-            android:layout_height="@dimen/_18pxh"
-            android:layout_width="@dimen/_19pxh"
-            android:scaleType="fitXY"
-            android:src="@drawable/img_vector_black_900"
-            tools:ignore="ContentDescription" tools:src="@drawable/img_vector_black_900"/>
-        <TextView android:ellipsize="end"
-            android:id="@+id/markTV"
+        android:layout_gravity="top|start"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:id="@+id/linearRowvectorOne"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/_1pxv"
-            android:layout_marginStart="@dimen/_6pxh"
-            android:layout_marginTop="@dimen/_3pxv"
-            android:layout_weight="0.59"
-            android:layout_width="0dp"
+            android:layout_marginStart="@dimen/_10pxh"
+            android:layout_marginTop="@dimen/_10pxv"
+            android:layout_marginEnd="@dimen/_10pxh"
+            android:gravity="start"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imageVectorOne"
+                android:layout_width="@dimen/_19pxh"
+                android:layout_height="@dimen/_18pxh"
+                android:scaleType="fitXY"
+                android:src="@drawable/img_vector_black_900"
+                tools:ignore="ContentDescription"
+                tools:src="@drawable/img_vector_black_900" />
+
+            <TextView
+                android:id="@+id/markTV"
+                style="@style/txtRobotoromanbold14"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_6pxh"
+                android:layout_marginTop="@dimen/_3pxv"
+                android:layout_marginBottom="@dimen/_1pxv"
+                android:layout_weight="0.59"
+                android:ellipsize="end"
+                android:letterSpacing="0.01"
+                android:lineSpacingExtra="@dimen/_1pxh"
+                android:singleLine="true"
+                android:text="@{teacherinfopageVM.teacherinfopageModel.txtFourHundredSixtySevenOne}"
+                tools:text="@string/lbl_4_67" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/commentSection"
+            style="@style/txtRobotoregular13"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_8pxh"
+            android:layout_marginTop="@dimen/_17pxv"
+            android:layout_marginEnd="@dimen/_10pxh"
+            android:layout_marginBottom="@dimen/_13pxv"
             android:letterSpacing="0.01"
             android:lineSpacingExtra="@dimen/_1pxh"
-            android:singleLine="true"
-            android:text="@{teacherinfopageVM.teacherinfopageModel.txtFourHundredSixtySevenOne}"
-            style="@style/txtRobotoromanbold14" tools:text="@string/lbl_4_67"/>
+            android:text="@{teacherinfopageVM.teacherinfopageModel.txtDescription}"
+            tools:text="sum" />
     </LinearLayout>
-    <TextView
-        android:id="@+id/commentSection"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_13pxv"
-        android:layout_marginEnd="@dimen/_10pxh"
-        android:layout_marginStart="@dimen/_8pxh"
-        android:layout_marginTop="@dimen/_17pxv"
-        android:layout_width="match_parent"
-        android:letterSpacing="0.01"
-        android:lineSpacingExtra="@dimen/_1pxh"
-        android:text="@{teacherinfopageVM.teacherinfopageModel.txtDescription}"
-        style="@style/txtRobotoregular13" tools:text="sum"/>
-</LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
