--- a/app/src/main/res/layout/row_professorpage.xml
+++ b/app/src/main/res/layout/row_professorpage.xml
@@ -1,30 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <data>
-        <variable name="teacherpageModel" type="com.leenz.pnrpu.models.pagesmodels.TeacherpageModel"/>
+
+        <variable
+            name="teacherpageModel"
+            type="com.leenz.pnrpu.models.pagesmodels.TeacherpageModel" />
     </data>
-    <LinearLayout android:gravity="start"
+
+    <LinearLayout
         android:id="@+id/linearTeacherCard"
+        style="@style/groupStylewhite_1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_5pxv"
-        android:layout_width="match_parent"
-        android:orientation="horizontal" style="@style/groupStylewhite_1">
-        <ImageView
-            android:background="@drawable/rectangle_bg_bluegray_100_radius_20"
-            android:scaleType="centerCrop"
-            android:id="@+id/professorImage"
+        android:gravity="start"
+        android:orientation="horizontal">
 
+        <ImageView
+            android:id="@+id/professorImage"
+            android:layout_width="@dimen/_65pxh"
             android:layout_height="@dimen/_65pxh"
-            android:layout_marginBottom="@dimen/_19pxv"
+
             android:layout_marginStart="@dimen/_9pxh"
             android:layout_marginTop="@dimen/_19pxv"
-            android:layout_width="@dimen/_65pxh"/>
+            android:layout_marginBottom="@dimen/_19pxv"
+            android:background="@drawable/rectangle_bg_bluegray_100_radius_20"
+            android:scaleType="centerCrop" />
 
         <LinearLayout
             android:id="@+id/linearColumnfourteen"
             android:layout_width="0dp"
-            android:layout_gravity="center"
             android:layout_height="match_parent"
+            android:layout_gravity="center"
             android:layout_marginStart="@dimen/_17pxh"
             android:layout_marginTop="@dimen/_8pxv"
             android:layout_marginBottom="@dimen/_9pxv"
@@ -69,15 +78,17 @@
             <!--                style="@style/txtRobotoromanregular11" tools:text="@string/msg4"/>-->
         </LinearLayout>
 
-        <ImageView android:id="@+id/arr"
+        <ImageView
+            android:id="@+id/arr"
+            android:layout_width="@dimen/_6pxh"
             android:layout_height="@dimen/_11pxh"
-            android:layout_marginBottom="@dimen/_33pxv"
-            android:layout_marginEnd="@dimen/_11pxh"
             android:layout_marginStart="@dimen/_17pxh"
             android:layout_marginTop="@dimen/_33pxv"
-            android:layout_width="@dimen/_6pxh"
+            android:layout_marginEnd="@dimen/_11pxh"
+            android:layout_marginBottom="@dimen/_33pxv"
             android:scaleType="fitXY"
             android:src="@drawable/img_arrowright_gray_912"
-            tools:ignore="ContentDescription" tools:src="@drawable/img_arrowright_gray_912"/>
+            tools:ignore="ContentDescription"
+            tools:src="@drawable/img_arrowright_gray_912" />
     </LinearLayout>
 </layout>
