--- a/app/src/main/res/layout/row_timetablepage.xml
+++ b/app/src/main/res/layout/row_timetablepage.xml
@@ -1,62 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <data>
-        <variable name="timetablepageRowModel" type="com.leenz.pnrpu.models.pagesmodels.TimetablepageRowModel"/>
+
+        <variable
+            name="timetablepageRowModel"
+            type="com.leenz.pnrpu.models.pagesmodels.TimetablepageRowModel" />
     </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/linearTimetableCard"
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:padding="2dp"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="2dp">
+
         <androidx.appcompat.widget.AppCompatButton
 
-            android:ellipsize="end" android:gravity="center"
             android:id="@+id/timeButton"
-            android:layout_height="@dimen/_33pxv"
+            style="@style/btnSolidRounded"
             android:layout_width="@dimen/_63pxh"
+            android:layout_height="@dimen/_33pxv"
+            android:ellipsize="end"
+            android:gravity="center"
             android:letterSpacing="0.01"
             android:lineSpacingExtra="@dimen/_1pxh"
             android:singleLine="true"
             android:text="@string/lbl_8_00"
             android:textAllCaps="false"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            style="@style/btnSolidRounded"
-            tools:text="@string/lbl_8_00"/>
-        <LinearLayout
-            android:gravity="center"
-            android:id="@+id/linearSubjectCard"
-            android:layout_height="wrap_content"
-
-            app:layout_constraintStart_toEndOf="@id/timeButton"
             app:layout_constraintTop_toTopOf="parent"
+            tools:text="@string/lbl_8_00" />
+
+        <LinearLayout
+            android:id="@+id/linearSubjectCard"
+            style="@style/groupStylewhite_1"
+            android:layout_width="0dp"
+
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_6pxh"
+            android:layout_weight="0.8"
+            android:background="@color/white_A700"
+            android:gravity="center"
+            android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginStart="@dimen/_6pxh"
-            android:background="@color/white_A700"
-            android:layout_weight="0.8" android:layout_width="0dp"
-            android:orientation="vertical" style="@style/groupStylewhite_1">
-            <LinearLayout android:id="@+id/lessonNameRowLayout"
+            app:layout_constraintStart_toEndOf="@id/timeButton"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <LinearLayout
+                android:id="@+id/lessonNameRowLayout"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/_4pxh"
                 android:layout_marginStart="@dimen/_7pxh"
                 android:layout_marginTop="@dimen/_5pxv"
-                android:layout_width="match_parent"
+                android:layout_marginEnd="@dimen/_4pxh"
 
                 android:orientation="horizontal">
-                <TextView android:id="@+id/lessonNameTV"
+
+                <TextView
+                    android:id="@+id/lessonNameTV"
+                    style="@style/txtRobotoromanmedium14"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.81"
-                    android:layout_width="0dp"
                     android:letterSpacing="0.01"
                     android:lineSpacingExtra="@dimen/_6pxh"
                     android:text="@{timetablepageRowModel.lessonName}"
-                    style="@style/txtRobotoromanmedium14" tools:text="@string/msg2"/>
+                    tools:text="@string/msg2" />
 
                 <TextView
                     android:id="@+id/lessonTypeTV"
@@ -78,32 +92,39 @@
                     android:textColor="#BF360C"
                     tools:text="@string/lbl2" />
             </LinearLayout>
-            <LinearLayout android:gravity="start"
+
+            <LinearLayout
                 android:id="@+id/linearRowellipseone"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/_6pxv"
-                android:layout_marginEnd="@dimen/_10pxh"
                 android:layout_marginStart="@dimen/_7pxh"
                 android:layout_marginTop="@dimen/_2pxv"
-                android:layout_width="match_parent"
+                android:layout_marginEnd="@dimen/_10pxh"
+                android:layout_marginBottom="@dimen/_6pxv"
+                android:gravity="start"
                 android:orientation="horizontal">
+
                 <ImageView
-                    android:scaleType="centerCrop"
-                    android:background="@drawable/rectangle_bg_bluegray_100_radius_12"
                     android:id="@+id/teacherAvatarCircle"
-                    android:layout_height="@dimen/_24pxh" android:layout_width="@dimen/_24pxh"/>
-                <TextView android:ellipsize="end"
+                    android:layout_width="@dimen/_24pxh"
+                    android:layout_height="@dimen/_24pxh"
+                    android:background="@drawable/rectangle_bg_bluegray_100_radius_12"
+                    android:scaleType="centerCrop" />
+
+                <TextView
                     android:id="@+id/lessonProfessorNameTV"
+                    style="@style/txtRobotoromanmedium12"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/_4pxv"
                     android:layout_marginStart="@dimen/_7pxh"
                     android:layout_marginTop="@dimen/_7pxv"
-                    android:layout_width="wrap_content"
+                    android:layout_marginBottom="@dimen/_4pxv"
+                    android:ellipsize="end"
                     android:letterSpacing="0.01"
                     android:lineSpacingExtra="@dimen/_1pxh"
                     android:singleLine="true"
                     android:text="@{timetablepageRowModel.lessonProfessorName}"
-                    style="@style/txtRobotoromanmedium12" tools:text="@string/lbl3"/>
+                    tools:text="@string/lbl3" />
 
                 <ImageView
                     android:id="@+id/dotElement"
@@ -116,25 +137,28 @@
                     android:src="@drawable/img_ellipse961"
                     tools:ignore="ContentDescription"
                     tools:src="@drawable/img_ellipse961" />
-                <TextView android:ellipsize="end"
-                    android:gravity="center_vertical"
+
+                <TextView
                     android:id="@+id/lessonLocationTV"
+                    style="@style/txtRobotoromanmedium12"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/_6pxv"
                     android:layout_marginStart="@dimen/_15pxh"
                     android:layout_marginTop="@dimen/_5pxv"
-                    android:layout_width="wrap_content"
+                    android:layout_marginBottom="@dimen/_6pxv"
+                    android:ellipsize="end"
+                    android:gravity="center_vertical"
                     android:letterSpacing="0.01"
                     android:lineSpacingExtra="@dimen/_1pxh"
                     android:singleLine="true"
                     android:text="@{timetablepageRowModel.lessonLocation}"
-                    style="@style/txtRobotoromanmedium12" tools:text="@string/lbl_201"/>
+                    tools:text="@string/lbl_201" />
             </LinearLayout>
-<!--            <View-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="1dp"-->
-<!--                app:layout_constraintTop_toBottomOf="@id/linearSubjectCard"-->
-<!--                android:background="@color/gray_400" />-->
+            <!--            <View-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="1dp"-->
+            <!--                app:layout_constraintTop_toBottomOf="@id/linearSubjectCard"-->
+            <!--                android:background="@color/gray_400" />-->
 
         </LinearLayout>
 
