--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:title="@string/timetable_bottom_nav_bar_text"
-          android:id="@+id/timetable"
-          android:icon="@drawable/img_vector"/>
-    <item android:title="@string/professor_bottom_nav_bar_text"
-          android:id="@+id/professor"
-          android:icon="@drawable/img_person"/>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:id="@+id/timetable"
+        android:icon="@drawable/img_vector"
+        android:title="@string/timetable_bottom_nav_bar_text" />
+    <item
+        android:id="@+id/professor"
+        android:icon="@drawable/img_person"
+        android:title="@string/professor_bottom_nav_bar_text" />
 
 </menu>
