--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Theme.Timetable_test" parent="Theme.Material3.Light">
         <!-- Primary brand color. -->
@@ -10,8 +10,8 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-<!--        <item name="android:statusBarColor" >@color/white_A700</item>-->
-<!--        <item name="android:windowLightStatusBar" />-->
+        <!--        <item name="android:statusBarColor" >@color/white_A700</item>-->
+        <!--        <item name="android:windowLightStatusBar" />-->
         <!-- Customize your theme here. -->
         <item name="android:windowLightStatusBar">true</item>
         <item name="android:navigationBarColor">@color/white_A700</item>
